added thumbnails locally

--- a/index.html
+++ b/index.html
@@ -52,32 +52,32 @@
                         <h1>Skills</h1>
                         <div class="skillscontainer">
                             <div>
-                                <img src="https://cdn-icons-png.flaticon.com/512/1051/1051328.png"><br>
+                                <img src="./assets/images/thumbnails/html5.png"><br>
                                 <h3>HTML</h3>
                             </div>
                             <div>
-                                <img src="https://cdn-icons-png.flaticon.com/512/732/732007.png">
+                                <img src="./assets/images/thumbnails/css3.png">
                                 <h3>CSS</h3>
                             </div>
                             <div>
-                                <img src="https://cdn-icons-png.flaticon.com/512/721/721671.png">
+                                <img src="./assets/images/thumbnails/js.png">
                                 <h3>JavaScript</h3>
                             </div>
                             <div>
-                                <img src="https://cdn-icons-png.flaticon.com/512/1602/1602309.png">
+                                <img src="./assets/images/thumbnails/mongo.png">
                                 <h3>MongoDB</h3>
                             </div>
                             <div>
                                 <img
-                                    src="https://www.pngfind.com/pngs/m/136-1363736_express-js-icon-png-transparent-png.png">
+                                    src="./assets/images/thumbnails/express.png">
                                 <h3>Express</h3>
                             </div>
                             <div>
-                                <img src="https://cdn-icons-png.flaticon.com/512/3393/3393920.png">
+                                <img src="./assets/images/thumbnails/react.png">
                                 <h3>React</h3>
                             </div>
                             <div>
-                                <img src="https://cdn-icons-png.flaticon.com/512/5726/5726104.png">
+                                <img src="./assets/images/thumbnails/node.png">
                                 <h3>Node.js</h3>
                             </div>
                         </div>
@@ -99,7 +99,7 @@
                                 src="assets/images/projects images/JSgame.png" alt="dev port"></a>
                         <b>A game created using vanilla js</b>
                         <a href="https://github.com/jokandro/js-game-project" target="_blank" class="gitlogo"><img
-                                src="https://cdn-icons-png.flaticon.com/512/25/25657.png"></a>
+                                src="./assets/images/thumbnails/git projects.png"></a>
                     </div>
                     <div class="gallery-item">
                         <h2>Todo App</h2>
@@ -107,7 +107,7 @@
                                 src="assets/images/projects images/Todo app.png" alt="try"> </a>
                         <b>A todo app made using React</b>
                         <a href="https://github.com/jokandro/todo-app" target="_blank" class="gitlogo"><img
-                                src="https://cdn-icons-png.flaticon.com/512/25/25657.png"></a>
+                                src="./assets/images/thumbnails/git projects.png"></a>
                     </div>
                     <div class="gallery-item">
                         <h2>Mini Resto App</h2>
@@ -115,7 +115,7 @@
                                 src="assets/images/projects images/mini resto app.png" alt="try"></a>
                         <b> A mini restaurant app made with react</b>
                         <a href="https://github.com/jokandro/resto-mini-app" target="_blank" class="gitlogo"><img
-                                src="https://cdn-icons-png.flaticon.com/512/25/25657.png"></a>
+                                src="./assets/images/thumbnails/git projects.png"></a>
                     </div>
                     <div class="gallery-item">
                         <h2>Mini Resto App with Backend</h2>
@@ -126,7 +126,7 @@
                         <b> Express web server as back-end and .json file as database</b>
                         <a href="https://github.com/jokandro/restoapp-with-express.js-server-frontend-backend"
                             target="_blank" class="gitlogo"><img
-                                src="https://cdn-icons-png.flaticon.com/512/25/25657.png"></a>
+                                src="./assets/images/thumbnails/git projects.png"></a>
                     </div>
                     <div class="gallery-item">
                         <h2>Expense Tracker App (Kalupi)</h2>
@@ -134,14 +134,14 @@
                                 src="assets/images/projects images/Kalupi.png" alt="try"></a>
                         <b>A fullstack MERN app</b>
                         <a href="https://github.com/jokandro/expense-tracker-frontend-backend" target="_blank"
-                            class="gitlogo"><img src="https://cdn-icons-png.flaticon.com/512/25/25657.png"></a>
+                            class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
                     </div>
                     <div class="gallery-item">
                         <h2>Job Finding App-Jobilis (In Progress)</h2>
                         <img src="assets/images/sample.jpg" alt="try">
                         <b>Full stack MERN app as a team</b>
                         <a class="gitlogo"><img
-                                src="https://cdn-icons-png.flaticon.com/512/25/25657.png"></a>
+                                src="./assets/images/thumbnails/git projects.png"></a>
                     </div>
 
 
@@ -173,10 +173,10 @@
         </main>
         <footer>
             <a href="https://gitlab.com/jamesbariuad" target="_blank"><img
-                    src="https://cdn-icons-png.flaticon.com/512/5968/5968853.png" alt="git"></i></a>
-            <a href="https://www.linkedin.com/in/james-bariuad-a77227241/" target="_blank"><img
+                    src="./assets/images/thumbnails/gitlabfooter.png" alt="git"></i></a>
+            <a href="./assets/images/thumbnails/linkedin footer.png" target="_blank"><img
                     src="https://cdn-icons-png.flaticon.com/512/3536/3536505.png"></a>
-            <a href="https://github.com/jokandro"><img src="https://cdn-icons-png.flaticon.com/512/733/733553.png"></a>
+            <a href="https://github.com/jokandro"><img src="./assets/images/thumbnails/github footer.png"></a>
         </footer>
 
     </div>
