minor ui change

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><a href="#About">About</a></li>
                     <li><a href="#Projects">Projects</a></li>
                     <li><a href="#Contact">Contact</a></li>
-                    <li id="cv"><a href="./assets/resumev2.pdf" download>CV</a></li>
+                    <li id="cv"><a href="./assets/resumev2.pdf" download>Resume</a></li>
                 </ul>
             </div>
             <!--about-->
