fix projects area

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
                                 <h3>MongoDB</h3>
                             </div>
                             <div>
-                                <img
-                                    src="./assets/images/thumbnails/express.png">
+                                <img src="./assets/images/thumbnails/express.png">
                                 <h3>Express</h3>
                             </div>
                             <div>
@@ -95,59 +94,69 @@
                 <div class="gallery">
                     <div class="gallery-item">
                         <h2>Memory Game</h2>
+                        <br>
                         <a href="https://jsgame01.herokuapp.com/" target="_blank"><img
                                 src="assets/images/projects images/JSgame.png" alt="dev port"></a>
+                        <br>
                         <b>A game created using vanilla js</b>
+                        <br>
                         <a href="https://github.com/jokandro/js-game-project" target="_blank" class="gitlogo"><img
                                 src="./assets/images/thumbnails/git projects.png"></a>
                     </div>
                     <div class="gallery-item">
                         <h2>Todo App</h2>
+                        <br>
                         <a href="https://todo-app02.herokuapp.com/" target="_blank"><img
                                 src="assets/images/projects images/Todo app.png" alt="try"> </a>
+                        <br>
                         <b>A todo app made using React</b>
+                        <br>
                         <a href="https://github.com/jokandro/todo-app" target="_blank" class="gitlogo"><img
                                 src="./assets/images/thumbnails/git projects.png"></a>
+
                     </div>
                     <div class="gallery-item">
                         <h2>Mini Resto App</h2>
+                        <br>
                         <a href="https://minirestoapp.herokuapp.com/" target="_blank"> <img
                                 src="assets/images/projects images/mini resto app.png" alt="try"></a>
+                        <br>
                         <b> A mini restaurant app made with react</b>
+                        <br>
                         <a href="https://github.com/jokandro/resto-mini-app" target="_blank" class="gitlogo"><img
                                 src="./assets/images/thumbnails/git projects.png"></a>
                     </div>
                     <div class="gallery-item">
                         <h2>Mini Resto App with Backend</h2>
-                        
+                        <br>
                         <a href="https://resto-app-front.onrender.com/" target="_blank"> <img
-                            src="assets/images/projects images/mini resto app.png" alt="try"></a>
-                  
+                                src="assets/images/projects images/mini resto app.png" alt="try"></a>
+                                <br>
                         <b> Express web server as back-end and .json file as database</b>
+                        <br>
                         <a href="https://github.com/jokandro/restoapp-with-express.js-server-frontend-backend"
-                            target="_blank" class="gitlogo"><img
-                                src="./assets/images/thumbnails/git projects.png"></a>
+                            target="_blank" class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
                     </div>
                     <div class="gallery-item">
                         <h2>Expense Tracker App (Kalupi)</h2>
+                        <br>
                         <a href="https://sunny-sunflower-e5f037.netlify.app/" target="_blank"> <img
                                 src="assets/images/projects images/Kalupi.png" alt="try"></a>
+                                <br>
                         <b>A fullstack MERN app</b>
+                        <br>
                         <a href="https://github.com/jokandro/expense-tracker-frontend-backend" target="_blank"
                             class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
                     </div>
                     <div class="gallery-item">
                         <h2>Job Finding App-Jobilis (In Progress)</h2>
+                        <br>
                         <img src="assets/images/sample.jpg" alt="try">
+                        <br>
                         <b>Full stack MERN app as a team</b>
-                        <a class="gitlogo"><img
-                                src="./assets/images/thumbnails/git projects.png"></a>
+                        <br>
+                        <a class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
                     </div>
-
-
-
-
-
                 </div>
 
             </div>
@@ -174,9 +183,9 @@
         <footer>
             <a href="https://gitlab.com/jamesbariuad" target="_blank"><img
                     src="./assets/images/thumbnails/gitlabfooter.png" alt="git"></i></a>
-            <a href="./assets/images/thumbnails/linkedin footer.png" target="_blank"><img
+            <a href="https://www.linkedin.com/in/james-bariuad-a77227241/" target="_blank"><img
                     src="https://cdn-icons-png.flaticon.com/512/3536/3536505.png"></a>
-            <a href="https://github.com/jokandro"><img src="./assets/images/thumbnails/github footer.png"></a>
+            <a href="https://github.com/jokandro" target="_blank"><img src="./assets/images/thumbnails/github footer.png"></a>
         </footer>
 
     </div>
