fixed broken heroku links

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="gallery-item">
                         <h2>Memory Game</h2>
                         <br>
-                        <a href="https://jsgame01.herokuapp.com/" target="_blank"><img
+                        <a href="https://illustrious-bublanina-171192.netlify.app/" target="_blank"><img
                                 src="assets/images/projects images/JSgame.png" alt="dev port"></a>
                         <br>
                         <b>A game created using vanilla js</b>
@@ -106,7 +106,7 @@
                     <div class="gallery-item">
                         <h2>Todo App</h2>
                         <br>
-                        <a href="https://todo-app02.herokuapp.com/" target="_blank"><img
+                        <a href="https://astounding-conkies-f75dc3.netlify.app/" target="_blank"><img
                                 src="assets/images/projects images/Todo app.png" alt="try"> </a>
                         <br>
                         <b>A todo app made using React</b>
@@ -118,7 +118,7 @@
                     <div class="gallery-item">
                         <h2>Mini Resto App</h2>
                         <br>
-                        <a href="https://minirestoapp.herokuapp.com/" target="_blank"> <img
+                        <a href="https://silly-belekoy-1a65ad.netlify.app/" target="_blank"> <img
                                 src="assets/images/projects images/mini resto app.png" alt="try"></a>
                         <br>
                         <b> A mini restaurant app made with react</b>
