Added mini projects

--- a/index.html
+++ b/index.html
@@ -157,6 +157,42 @@
                         <br>
                         <a class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
                     </div>
+                    <div class="gallery-item">
+                        <h2>Landing Page</h2>
+                        <br>
+                        <a href="https://jokandro.github.io/odin-landing-page/" target="_blank"><img src="assets/images/projects images/website-template.png" alt="web-template"></a>
+                        <br>
+                        <b>Made using HTML and Css</b>
+                        <br>
+                        <a class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
+                    </div> 
+                    <div class="gallery-item">
+                        <h2>Rock, Paper, Scissors</h2>
+                        <br>
+                        <a href="https://jokandro.github.io/odin-rock-paper-scissors/" target="_blank"><img src="assets/images/projects images/rps.png" alt="rps-thumbnail"></a>
+                        <br>
+                        <b>Classic game made using JavaScript</b>
+                        <br>
+                        <a class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
+                    </div> 
+                    <div class="gallery-item">
+                        <h2>Etch-a-Sketch</h2>
+                        <br>
+                        <a href="https://jokandro.github.io/odin-etch-a-sketch/" target="_blank"><img src="assets/images/projects images/etch.png" alt="rps-thumbnail"></a>
+                        <br>
+                        <b>Draw using JavaScript!</b>
+                        <br>
+                        <a class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
+                    </div>  
+                    <div class="gallery-item">
+                        <h2>Calculator</h2>
+                        <br>
+                        <a href="https://jokandro.github.io/odin-calculator/" target="_blank"><img src="assets/images/projects images/calc.png" alt="rps-thumbnail"></a>
+                        <br>
+                        <b>Design inspired by old calculators(made with JavaScript)</b>
+                        <br>
+                        <a class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
+                    </div>  
                 </div>
 
             </div>
