Added github links, updated resume

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><a href="#About">About</a></li>
                     <li><a href="#Projects">Projects</a></li>
                     <li><a href="#Contact">Contact</a></li>
-                    <li id="cv"><a href="./assets/james bariuad resume.pdf" download>Resume</a></li>
+                    <li id="cv"><a href="assets/images/jamesbariuadresume.pdf" download>Resume</a></li>
                 </ul>
             </div>
             <!--about-->
@@ -93,6 +93,53 @@
 
                 <div class="gallery">
                     <div class="gallery-item">
+                        <h2>Expense Tracker App (Kalupi)</h2>
+                        <br>
+                        <a href="https://sunny-sunflower-e5f037.netlify.app/" target="_blank"> <img
+                                src="assets/images/projects images/Kalupi.png" alt="try"></a>
+                                <br>
+                        <b>A fullstack MERN app</b>
+                        <br>
+                        <a href="https://github.com/jokandro/expense-tracker-frontend-backend" target="_blank"
+                            class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
+                    </div>
+                    <div class="gallery-item">
+                        <h2>Calculator</h2>
+                        <br>
+                        <a href="https://jokandro.github.io/odin-calculator/" target="_blank"><img src="assets/images/projects images/calc.png" alt="rps-thumbnail"></a>
+                        <br>
+                        <b>Design inspired by old calculators(made with JavaScript)</b>
+                        <br>
+                        <a  href="https://github.com/jokandro/odin-calculator" class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
+                    </div>  
+                    <div class="gallery-item">
+                        <h2>Etch-a-Sketch</h2>
+                        <br>
+                        <a href="https://jokandro.github.io/odin-etch-a-sketch/" target="_blank"><img src="assets/images/projects images/etch.png" alt="rps-thumbnail"></a>
+                        <br>
+                        <b>Draw using JavaScript!</b>
+                        <br>
+                        <a href="https://github.com/jokandro/odin-etch-a-sketch" class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
+                    </div>  
+                    <div class="gallery-item">
+                        <h2>Rock, Paper, Scissors</h2>
+                        <br>
+                        <a href="https://jokandro.github.io/odin-rock-paper-scissors/" target="_blank"><img src="assets/images/projects images/rps.png" alt="rps-thumbnail"></a>
+                        <br>
+                        <b>Classic game made using JavaScript</b>
+                        <br>
+                        <a href="https://github.com/jokandro/odin-rock-paper-scissors" class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
+                    </div> 
+                    <div class="gallery-item">
+                        <h2>Landing Page</h2>
+                        <br>
+                        <a href="https://jokandro.github.io/odin-landing-page/" target="_blank"><img src="assets/images/projects images/website-template.png" alt="web-template"></a>
+                        <br>
+                        <b>Made using HTML and Css</b>
+                        <br>
+                        <a href="https://github.com/jokandro/odin-landing-page" class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
+                    </div> 
+                    <div class="gallery-item">
                         <h2>Memory Game</h2>
                         <br>
                         <a href="https://illustrious-bublanina-171192.netlify.app/" target="_blank"><img
@@ -138,17 +185,6 @@
                             target="_blank" class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
                     </div>
                     <div class="gallery-item">
-                        <h2>Expense Tracker App (Kalupi)</h2>
-                        <br>
-                        <a href="https://sunny-sunflower-e5f037.netlify.app/" target="_blank"> <img
-                                src="assets/images/projects images/Kalupi.png" alt="try"></a>
-                                <br>
-                        <b>A fullstack MERN app</b>
-                        <br>
-                        <a href="https://github.com/jokandro/expense-tracker-frontend-backend" target="_blank"
-                            class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
-                    </div>
-                    <div class="gallery-item">
                         <h2>Job Finding App-Jobilis (In Progress)</h2>
                         <br>
                         <img src="assets/images/sample.jpg" alt="try">
@@ -157,42 +193,6 @@
                         <br>
                         <a class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
                     </div>
-                    <div class="gallery-item">
-                        <h2>Landing Page</h2>
-                        <br>
-                        <a href="https://jokandro.github.io/odin-landing-page/" target="_blank"><img src="assets/images/projects images/website-template.png" alt="web-template"></a>
-                        <br>
-                        <b>Made using HTML and Css</b>
-                        <br>
-                        <a class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
-                    </div> 
-                    <div class="gallery-item">
-                        <h2>Rock, Paper, Scissors</h2>
-                        <br>
-                        <a href="https://jokandro.github.io/odin-rock-paper-scissors/" target="_blank"><img src="assets/images/projects images/rps.png" alt="rps-thumbnail"></a>
-                        <br>
-                        <b>Classic game made using JavaScript</b>
-                        <br>
-                        <a class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
-                    </div> 
-                    <div class="gallery-item">
-                        <h2>Etch-a-Sketch</h2>
-                        <br>
-                        <a href="https://jokandro.github.io/odin-etch-a-sketch/" target="_blank"><img src="assets/images/projects images/etch.png" alt="rps-thumbnail"></a>
-                        <br>
-                        <b>Draw using JavaScript!</b>
-                        <br>
-                        <a class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
-                    </div>  
-                    <div class="gallery-item">
-                        <h2>Calculator</h2>
-                        <br>
-                        <a href="https://jokandro.github.io/odin-calculator/" target="_blank"><img src="assets/images/projects images/calc.png" alt="rps-thumbnail"></a>
-                        <br>
-                        <b>Design inspired by old calculators(made with JavaScript)</b>
-                        <br>
-                        <a class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
-                    </div>  
                 </div>
 
             </div>
