Fixed github links

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <br>
                         <b>Design inspired by old calculators(made with JavaScript)</b>
                         <br>
-                        <a  href="https://github.com/jokandro/odin-calculator" class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
+                        <a  href="https://github.com/jokandro/odin-calculator" class="gitlogo" target="_blank"><img src="./assets/images/thumbnails/git projects.png"></a>
                     </div>  
                     <div class="gallery-item">
                         <h2>Etch-a-Sketch</h2>
@@ -119,7 +119,7 @@
                         <br>
                         <b>Draw using JavaScript!</b>
                         <br>
-                        <a href="https://github.com/jokandro/odin-etch-a-sketch" class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
+                        <a href="https://github.com/jokandro/odin-etch-a-sketch" class="gitlogo"  target="_blank"><img src="./assets/images/thumbnails/git projects.png"></a>
                     </div>  
                     <div class="gallery-item">
                         <h2>Rock, Paper, Scissors</h2>
@@ -128,7 +128,7 @@
                         <br>
                         <b>Classic game made using JavaScript</b>
                         <br>
-                        <a href="https://github.com/jokandro/odin-rock-paper-scissors" class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
+                        <a href="https://github.com/jokandro/odin-rock-paper-scissors" class="gitlogo"  target="_blank"><img src="./assets/images/thumbnails/git projects.png"></a>
                     </div> 
                     <div class="gallery-item">
                         <h2>Landing Page</h2>
@@ -137,7 +137,7 @@
                         <br>
                         <b>Made using HTML and Css</b>
                         <br>
-                        <a href="https://github.com/jokandro/odin-landing-page" class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
+                        <a href="https://github.com/jokandro/odin-landing-page" class="gitlogo"  target="_blank"><img src="./assets/images/thumbnails/git projects.png"></a>
                     </div> 
                     <div class="gallery-item">
                         <h2>Memory Game</h2>
