Fix Links, Updated Resume, Added Some Projects

--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
                         <img src="assets/images/nice.jpg" alt="hehe">
                         <br></br>
 
-                        <p>Finding ways to be productive because of the pandemic. Learning coding and started to love
-                            it. Life is a learning process and I aim to keep on learning new things and improving myself
-                            everyday!</p>
+                        <p>
+                            Amidst the pandemic, I discovered coding and developed a genuine passion for it. Life is an eternal learning process, and I strive to improve myself daily by embracing new experiences.</p>
                     </div>
 
                     <div class="card2">
@@ -98,7 +97,7 @@
                         <a href="https://sunny-sunflower-e5f037.netlify.app/" target="_blank"> <img
                                 src="assets/images/projects images/Kalupi.png" alt="try"></a>
                                 <br>
-                        <b>A fullstack MERN app</b>
+                        <b> Set budgets, monitor trends, and take control of your finances, all in one app. Made using MERN stack.</b>
                         <br>
                         <a href="https://github.com/jokandro/expense-tracker-frontend-backend" target="_blank"
                             class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
@@ -106,38 +105,60 @@
                     <div class="gallery-item">
                         <h2>Calculator</h2>
                         <br>
-                        <a href="https://jokandro.github.io/odin-calculator/" target="_blank"><img src="assets/images/projects images/calc.png" alt="rps-thumbnail"></a>
+                        <a href="https://jamesbariuad.github.io/odin-calculator/" target="_blank"><img src="assets/images/projects images/calc.png" alt="rps-thumbnail"></a>
                         <br>
-                        <b>Design inspired by old calculators(made with JavaScript)</b>
+                        <b>JavaScript calculator blending classic design & modern functionality. Nostalgia meets precision.</b>
                         <br>
-                        <a  href="https://github.com/jokandro/odin-calculator" class="gitlogo" target="_blank"><img src="./assets/images/thumbnails/git projects.png"></a>
+                        <a  href="https://github.com/jamesBariuad/odin-calculator" class="gitlogo" target="_blank"><img src="./assets/images/thumbnails/git projects.png"></a>
                     </div>  
                     <div class="gallery-item">
                         <h2>Etch-a-Sketch</h2>
                         <br>
-                        <a href="https://jokandro.github.io/odin-etch-a-sketch/" target="_blank"><img src="assets/images/projects images/etch.png" alt="rps-thumbnail"></a>
+                        <a href="https://jamesbariuad.github.io/odin-etch-a-sketch/" target="_blank"><img src="assets/images/projects images/etch.png" alt="rps-thumbnail"></a>
                         <br>
                         <b>Draw using JavaScript!</b>
                         <br>
-                        <a href="https://github.com/jokandro/odin-etch-a-sketch" class="gitlogo"  target="_blank"><img src="./assets/images/thumbnails/git projects.png"></a>
+                        <a href="https://github.com/jamesBariuad/odin-etch-a-sketch" class="gitlogo"  target="_blank"><img src="./assets/images/thumbnails/git projects.png"></a>
                     </div>  
+                    <div class="gallery-item">
+                        <h2>Admin Dashboard</h2>
+                        <br>
+                        <a href="https://jamesbariuad.github.io/odin-forms/" target="_blank"> <img
+                                src="./assets/images/projects images/dashboard.PNG" alt="try"></a>
+                        <br>
+                        <b>A clean and responsive admin dashboard interface. Utilization of CSS Grid for layout design.</b>
+                        <br>
+                        <a href="https://github.com/jamesBariuad/odin-forms" target="_blank" class="gitlogo"><img
+                                src="./assets/images/thumbnails/git projects.png"></a>
+                    </div>
                     <div class="gallery-item">
                         <h2>Rock, Paper, Scissors</h2>
                         <br>
-                        <a href="https://jokandro.github.io/odin-rock-paper-scissors/" target="_blank"><img src="assets/images/projects images/rps.png" alt="rps-thumbnail"></a>
+                        <a href="https://jamesbariuad.github.io/odin-rock-paper-scissors/" target="_blank"><img src="assets/images/projects images/rps.png" alt="rps-thumbnail"></a>
                         <br>
                         <b>Classic game made using JavaScript</b>
                         <br>
-                        <a href="https://github.com/jokandro/odin-rock-paper-scissors" class="gitlogo"  target="_blank"><img src="./assets/images/thumbnails/git projects.png"></a>
+                        <a href="https://github.com/jamesBariuad/odin-rock-paper-scissors" class="gitlogo"  target="_blank"><img src="./assets/images/thumbnails/git projects.png"></a>
                     </div> 
+                    <div class="gallery-item">
+                        <h2>La Carinderia</h2>
+                        <br>
+                        <a href="https://jamesbariuad.github.io/odin-restaurant/" target="_blank"> <img
+                                src="./assets/images/projects images/la-carinderia.PNG" alt="try"></a>
+                        <br>
+                        <b>Built using Webpack</b>
+                        <br>
+                        <a href="https://github.com/jamesBariuad/odin-restaurant" target="_blank" class="gitlogo"><img
+                                src="./assets/images/thumbnails/git projects.png"></a>
+                    </div>
                     <div class="gallery-item">
                         <h2>Landing Page</h2>
                         <br>
-                        <a href="https://jokandro.github.io/odin-landing-page/" target="_blank"><img src="assets/images/projects images/website-template.png" alt="web-template"></a>
+                        <a href="https://jamesbariuad.github.io/odin-landing-page/" target="_blank"><img src="assets/images/projects images/website-template.png" alt="web-template"></a>
                         <br>
                         <b>Made using HTML and Css</b>
                         <br>
-                        <a href="https://github.com/jokandro/odin-landing-page" class="gitlogo"  target="_blank"><img src="./assets/images/thumbnails/git projects.png"></a>
+                        <a href="https://github.com/jamesBariuad/odin-landing-page" class="gitlogo"  target="_blank"><img src="./assets/images/thumbnails/git projects.png"></a>
                     </div> 
                     <div class="gallery-item">
                         <h2>Memory Game</h2>
@@ -148,6 +169,17 @@
                         <b>A game created using vanilla js</b>
                         <br>
                         <a href="https://github.com/jokandro/js-game-project" target="_blank" class="gitlogo"><img
+                                src="./assets/images/thumbnails/git projects.png"></a>
+                    </div>
+                    <div class="gallery-item">
+                        <h2>Sign-up Form</h2>
+                        <br>
+                        <a href="https://jamesbariuad.github.io/odin-forms/" target="_blank"><img
+                                src="assets/images/projects images/forms.PNG" alt="dev port"></a>
+                        <br>
+                        <b> HTML5 validation for seamless client-side input validation.</b>
+                        <br>
+                        <a href="https://github.com/jamesBariuad/odin-forms" target="_blank" class="gitlogo"><img
                                 src="./assets/images/thumbnails/git projects.png"></a>
                     </div>
                     <div class="gallery-item">
@@ -163,28 +195,17 @@
 
                     </div>
                     <div class="gallery-item">
-                        <h2>Mini Resto App</h2>
-                        <br>
-                        <a href="https://silly-belekoy-1a65ad.netlify.app/" target="_blank"> <img
-                                src="assets/images/projects images/mini resto app.png" alt="try"></a>
-                        <br>
-                        <b> A mini restaurant app made with react</b>
-                        <br>
-                        <a href="https://github.com/jokandro/resto-mini-app" target="_blank" class="gitlogo"><img
-                                src="./assets/images/thumbnails/git projects.png"></a>
-                    </div>
-                    <div class="gallery-item">
                         <h2>Mini Resto App with Backend</h2>
                         <br>
                         <a href="https://resto-app-front.onrender.com/" target="_blank"> <img
                                 src="assets/images/projects images/mini resto app.png" alt="try"></a>
                                 <br>
-                        <b> Express web server as back-end and .json file as database</b>
+                        <b> Express web server as back-end and .json file as database, hosted on render.com</b>
                         <br>
                         <a href="https://github.com/jokandro/restoapp-with-express.js-server-frontend-backend"
                             target="_blank" class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
                     </div>
-                    <div class="gallery-item">
+                    <!-- <div class="gallery-item">
                         <h2>Job Finding App-Jobilis (In Progress)</h2>
                         <br>
                         <img src="assets/images/sample.jpg" alt="try">
@@ -192,7 +213,7 @@
                         <b>Full stack MERN app as a team</b>
                         <br>
                         <a class="gitlogo"><img src="./assets/images/thumbnails/git projects.png"></a>
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
