--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
                     <div class="gallery-item">
                         <h2>Admin Dashboard</h2>
                         <br>
-                        <a href="https://jamesbariuad.github.io/odin-forms/" target="_blank"> <img
+                        <a href="https://jamesbariuad.github.io/odin-dashboard-grid/" target="_blank"> <img
                                 src="./assets/images/projects images/dashboard.PNG" alt="try"></a>
                         <br>
                         <b>A clean and responsive admin dashboard interface. Utilization of CSS Grid for layout design.</b>
                         <br>
-                        <a href="https://github.com/jamesBariuad/odin-forms" target="_blank" class="gitlogo"><img
+                        <a href="https://github.com/jamesBariuad/odin-dashboard-grid" target="_blank" class="gitlogo"><img
                                 src="./assets/images/thumbnails/git projects.png"></a>
                     </div>
                     <div class="gallery-item">
